--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../DJI/DJI-SDK-LIB_v2.0.0
+android.library.reference.1=../DJI-SDK-LIB
 android.library=false
