--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -42,7 +42,9 @@
         <meta-data
             android:name="com.dji.sdk.API_KEY"
             android:value="2bdbe6b2d8ab8904a1ebc3f7" />
-
+        
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="7095000" />
         <activity
             android:name=".MainMenu"
             android:label="@string/app_name"
