Migration to NavmiiControl

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,5 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../../DJI/DJI-SDK-LIB_v2.1.0
+android.library.reference.1=../DJI/DJI-SDK-LIB_v2.1.0
 android.library=false
