Added refactored SDK

--- a/project.properties
+++ b/project.properties
@@ -12,5 +12,7 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../DJI/DJI-SDK-LIB_v2.1.0
+android.library.reference.1=..\\DJI\\DJI-SDK-LIB_v2.1.0
 android.library=false
+android.library.reference.2=../../Branches/26057_AndroidControl/NavigationSystem_Android/NavmiiSDK
+android.library.reference.3=../../Branches/26057_AndroidControl/NavigationSystem_Android/google_play_services/libproject/google-play-services_lib
