--- a/project.properties
+++ b/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\NavmiiSDK
+android.library.reference.1=../NavmiiSDK
 android.library=false
-android.library.reference.2=../../DJI/DJI-SDK-LIB_v2.3.0
+android.library.reference.2=../DJI-SDK-LIB
